align footer content fix heart click

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -90,6 +90,9 @@ body {
 .fa-heart:hover {
   color: red;
 }
+.clicked {
+  color: red;
+}
 
 .main-footer {
   display: flex;
@@ -100,7 +103,6 @@ body {
   font-family: Bungee;
   color: #fff;
   text-align: center;
-  padding-left: 5px;
 }
 
 sup {
